js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/main/test.3.kt
fun test(): Int {
    try {
        return foo().toInt() + 1
    } catch (e: Error) {
        return 6
    }
}
